test/spec_vectors/local_set/fail/module_1.wat
(module (func $type-local-arg-void-vs-num (local i32) (local.set 0 (nop))))